# VectorQt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brush-engine.cpp  code_audit_report.md  colorpalette.cpp  colorpalette.h  cursor-manager.cpp  drawing-canvas.cpp  drawing-canvas.h  drawing-document.cpp  drawing-group.cpp  drawing-group.h  drawing-shape.cpp  drawing-shape.h  drawing-throttle.cpp  drawing-throttle.h  drawing-tool-bezier-edit.cpp  drawing-tool-bezier-edit.h  drawing-tool-bezier.cpp  drawing-tool-bezier.h  drawing-tool-brush.cpp  drawing-tool-brush.h  drawing-tool-eraser.cpp  drawing-tool-eraser.h  drawing-tool-gradient-fill.cpp  drawing-tool-gradient-fill.h  drawing-tool-node-edit.cpp  drawing-tool-node-edit.h  drawing-tool-outline-preview.cpp  drawing-tool-outline-preview.h  drawing-tool-path-edit.cpp  drawing-tool-path-edit.h  drawing-tool-pen.cpp  drawing-tool-pen.h  drawing-tool-polygon.cpp  drawing-tool-polygon.h  drawing-tool-polyline.cpp  drawing-tool-polyline.h  (+35 more)
demo-build/: VectorFlow
docs/: TODO.md  copy_paste_test.md  event-bus-optimization.md  hybrid-communication-strategy.md  object-pool-optimization.md  render-optimization.md  smart_node_control_proposal.md  snap_indicator_debug_report.md  snap_indicator_fix_proposal.md  snap_indicator_fix_report.md  snap_indicator_simplified_report.md  svg-handler-optimization-report.md  tech-debt-tracker.md  test_shortcuts.md
examples/: smart_node_control_example.cpp
icons/modern/: preview.html
src/core/: brush-engine.cpp  brush-engine.h  drawing-canvas.cpp  drawing-canvas.h  drawing-document.cpp  drawing-document.h  drawing-group.cpp  drawing-group.h  drawing-layer.cpp  drawing-layer.h  drawing-shape.cpp  drawing-shape.h  drawing-throttle.cpp  event-bus.cpp  event-bus.h  fastpathparser.cpp  fastpathparser.h  graphics-adapter.h  layer-manager.cpp  layer-manager.h  memory-manager.cpp  memory-manager.h  object-pool.cpp  object-pool.h  object-tree-item.cpp  object-tree-item.h  object-tree-model.cpp  object-tree-model.h  patheditor.cpp  patheditor.h  performance-monitor.cpp  performance-monitor.h  smart-render-manager.cpp  smart-render-manager.h  svgcolorparser.cpp  svgcolorparser.h  svgelementcollector.cpp  svgelementcollector.h  svghandler.cpp  svghandler.h  (+10 more)
src/tools/: bezier-control-arm.h  drawing-tool-bezier.cpp  drawing-tool-bezier.h  drawing-tool-brush.cpp  drawing-tool-brush.h  drawing-tool-eraser.cpp  drawing-tool-eraser.h  drawing-tool-fill.cpp  drawing-tool-fill.h  drawing-tool-gradient-fill.cpp  drawing-tool-gradient-fill.h  drawing-tool-line.cpp  drawing-tool-line.h  drawing-tool-node-edit.cpp  drawing-tool-node-edit.h  drawing-tool-outline-preview.cpp  drawing-tool-outline-preview.h  drawing-tool-path-edit.cpp  drawing-tool-path-edit.h  drawing-tool-pen.cpp  drawing-tool-pen.h  drawing-tool-polygon.cpp  drawing-tool-polygon.h  drawing-tool-polyline.cpp  drawing-tool-polyline.h  drawing-tool-text.cpp  drawing-tool-text.h  drawing-tool.cpp  drawing-tool.h  handle-icons.cpp  handle-icons.h  handle-item.cpp  handle-item.h  handle-types.h  node-handle-manager.cpp  node-handle-manager.h  tool-manager.cpp  tool-manager.h  tool-state-manager.cpp  tool-state-manager.h  (+3 more)
src/ui/: action-manager.cpp  action-manager.h  colorpalette.cpp  command-manager.cpp  command-manager.h  control-frame.cpp  control-frame.h  cursor-manager.cpp  cursor-manager.h  drawingscene.cpp  drawingscene.h  drawingview.cpp  drawingview.h  effect-manager.cpp  effect-manager.h  file-manager.cpp  file-manager.h  grid-manager.cpp  grid-manager.h  layer-panel.cpp  layer-panel.h  main.cpp  mainwindow.cpp  mainwindow.h  object-tree-view.cpp  object-tree-view.h  page-settings-panel.cpp  page-settings-panel.h  path-operations-manager.cpp  path-operations-manager.h  performance-panel-tab.cpp  performance-panel-tab.h  propertypanel.cpp  propertypanel.h  ruler.cpp  ruler.h  scrollable-toolbar.cpp  scrollable-toolbar.h  selection-manager.cpp  selection-manager.h  (+16 more)
test/: CMakeLists.txt  memory-test.cpp  performance-test.cpp  simple-memory-test.cpp  simplified-group-transform.h  test-transform-components.cpp  test-transform-components.pro  tool-switch-performance-test.cpp  transform-components-integration-test.md  transform-demo.h  transform-demo.pro  transform-system-broken.h  transform-system.cpp  transform-system.h
translations/: vectorqt_en.qm  vectorqt_en.ts  vectorqt_zh_CN.qm  vectorqt_zh_CN.ts
